--- a/src/app/tab/tab.component.html
+++ b/src/app/tab/tab.component.html
@@ -1,13 +1,13 @@
 <div>
   <ul class="nav nav-tabs">
-    <li *ngFor="let t of tabs; let ti = index" [class.active]="activeTab == t">
-      <a href="#{{t}}" (click)="activeTab = t">{{t}}
-      <button class="close closeTab" type="button" (click)="tabs.splice(ti, 1); activeTab=tabs[0]">×</button>
+    <li *ngFor="let t of tabs; let tabIndex = index" [class.active]="activeTab == tabIndex">
+      <a href="#" (click)="activeTab = tabIndex">{{t}}
+      <button class="close closeTab" type="button" (click)="onTabClose(tabIndex)">×</button>
       </a>
     </li>
   </ul>
   <div class="tab-content">
-    <div *ngFor="let t of tabs" class="tab-pane" [class.active]="activeTab == t">
+    <div *ngFor="let t of tabs; let tabIndex = index" class="tab-pane" [class.active]="activeTab == tabIndex">
       <h1>{{t}}</h1>
     </div>
   </div>
