--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,24 @@
-<h1>
-  {{title}}
-</h1>
-<a routerLink="/list">List</a>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="/caesar" (click)="activeTab = ''">Caesar</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li [class.active]="activeTab == 'list'">
+          <a routerLink="/list" (click)="activeTab = 'list'">List <span class="sr-only">(current)</span></a>
+        </li>
+        <li [class.active]="activeTab == 'arraymodel'" (click)="activeTab = 'arraymodel'">
+          <a routerLink="/arraymodel">ArrayModel <span class="sr-only">(current)</span></a>
+        </li>
+        <li [class.active]="activeTab == 'tab'" (click)="activeTab = 'tab'">
+          <a routerLink="/tab">Tab<span class="sr-only">(current)</span></a>
+        </li>
+        <li [class.active]="activeTab == 'panel'" (click)="activeTab = 'panel'">
+          <a routerLink="/panel">Panel<span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <router-outlet>
