--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,16 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li [class.active]="activeTab == 'list'">
-          <a routerLink="/list" (click)="activeTab = 'list'">List <span class="sr-only">(current)</span></a>
+        <li [class.active]="activeTab == 'list'" [myHighlight]="'yellow'" (click)="activeTab = 'list'">
+          <a routerLink="/list">List <span class="sr-only">(current)</span></a>
         </li>
-        <li [class.active]="activeTab == 'arraymodel'" (click)="activeTab = 'arraymodel'">
+        <li [class.active]="activeTab == 'arraymodel'" myHighlight (click)="activeTab = 'arraymodel'">
           <a routerLink="/arraymodel">ArrayModel <span class="sr-only">(current)</span></a>
         </li>
-        <li [class.active]="activeTab == 'tab'" (click)="activeTab = 'tab'">
+        <li [class.active]="activeTab == 'tab'" myHighlight (click)="activeTab = 'tab'">
           <a routerLink="/tab">Tab<span class="sr-only">(current)</span></a>
         </li>
-        <li [class.active]="activeTab == 'panel'" (click)="activeTab = 'panel'">
+        <li [class.active]="activeTab == 'panel'" myHighlight (click)="activeTab = 'panel'">
           <a routerLink="/panel">Panel<span class="sr-only">(current)</span></a>
         </li>
       </ul>
