--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,30 +1,78 @@
 <div class="panel panel-default">
   <div class="panel-heading">CMFFDLSTX</div>
-    <table class="table">
-      <thead>
-        <tr><th>col1</th><th>col2</th><th>col3</th><th>col4</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-      </tbody>
-    </table>
+  <table class="table table-bordered table-hover">
+    <thead>
+      <tr>
+        <th>col1</th>
+        <th>col2</th>
+        <th>col3</th>
+        <th>col4</th>
+        <th>col5</th>
+        <th>col6</th>
+        <th>col7</th>
+        <th>col8</th>
+        <th>col9</th>
+        <th>col0</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><input type="text" name="data1"></td>
+        <td><input type="text" name="data2"></td>
+        <td><input type="text" name="data3"></td>
+        <td><input type="text" name="data4"></td>
+        <td><input type="text" name="data5"></td>
+        <td><input type="text" name="data6"></td>
+        <td><input type="text" name="data7"></td>
+        <td><input type="text" name="data8"></td>
+        <td><input type="text" name="data9"></td>
+        <td><input type="text" name="data0"></td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">CMFFDLSTX</div>
-    <table class="table">
-      <thead>
-        <tr><th>col1</th><th>col2</th><th>col3</th><th>col4</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-        <tr><td>data1</td><td>data2</td><td>data3</td><td>data4</td></tr>
-      </tbody>
-    </table>
+  <table class="table table-bordered table-hover">
+    <thead>
+      <tr>
+        <th>col1</th>
+        <th>col2</th>
+        <th>col3</th>
+        <th>col4</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+        <td>data4</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+        <td>data4</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+        <td>data4</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+        <td>data4</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+        <td>data4</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
