--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -12,9 +12,17 @@
 
 <div *ngIf="enviroment" class="form-group">
   <select class="form-control" [(ngModel)]="entry" name="entry" (change)="onSelectEntry()">
-    <option *ngFor="let entry of addrs[platform][enviroment] | entryPipe">{{entry.key}}</option>
+    <option *ngFor="let entry of (addrs[platform][enviroment] | entryPipe)">{{entry.key}}</option>
   </select>
 </div>
 <p *ngIf="addr">
   {{addr.url}} {{addr.ip}} {{addr.port}}
 </p>
+
+<div class="form-group">
+  <select class="form-control">
+    <option value="1">1</option>
+    <option value="2" [attr.selected]="true">2</option>
+    <option value="3">3</option>
+  </select>
+</div>
