--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -11,18 +11,19 @@
 input {
   padding: 0;
   width: 80px;
+  border-radius: 2px;
 }
 
 .ng-valid[required],
 .ng-valid.required {
   border: 0;
-  border-left: 2px solid #41A947;
+  border-right: 2px solid #07F315;
   /* green */
 }
 
 .ng-invalid:not(form) {
   border: 0;
-  border-left: 2px solid #a94442;
+  border-right: 2px solid #E11511;
   /* red */
 }
 
@@ -36,16 +37,4 @@ input {
 
 .table {
   margin: 0;
-}
-
-.width80 {
-  width: 80px;
-}
-
-.width120 {
-  width: 120px;
-}
-
-.width160 {
-  width: 160px;
 }
