--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
         <li [class.active]="activeTab == 'form'" myHighlight (click)="activeTab = 'form'">
           <a routerLink="/form">Form<span class="sr-only">(current)</span></a>
         </li>
+        <li [class.active]="activeTab == 'collapse'" myHighlight (click)="activeTab = 'collapse'">
+          <a routerLink="/collapse">Collapse<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
   </div>
