--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
         <li [class.active]="activeTab == 'search'" myHighlight (click)="activeTab = 'search'">
           <a routerLink="/search">Search<span class="sr-only">(current)</span></a>
         </li>
+        <li [class.active]="activeTab == 'ani'" myHighlight (click)="activeTab = 'ani'">
+          <a routerLink="/ani">Animation<span class="sr-only">(current)</span></a>
+        </li>
       </ul>
     </div>
   </div>
