--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" routerLink="" (click)="activeTab = ''">Caesar</a>
+      <a class="navbar-brand" routerLink="/caesar" (click)="activeTab = ''">Caesar</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li [class.active]="activeTab == 'tab'" myHighlight (click)="activeTab = 'tab'">
           <a routerLink="/tab">Tab<span class="sr-only">(current)</span></a>
+        </li>
+        <li [class.active]="activeTab == 'directives'" myHighlight (click)="activeTab = 'directives'">
+          <a routerLink="/directives">Directives<span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
