import progress bar component from the control module

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -1,1 +1,2 @@
 <div appClickable class="clickable" (myClick)="onClick($event)">Clickable[{{times}}]</div>
+<control-progressbar [(value)]="times"></control-progressbar>
