--- a/src/app/caesar/caesar.component.html
+++ b/src/app/caesar/caesar.component.html
@@ -30,6 +30,9 @@
     <li [class.active]="activeTab == 'tab'">
       <a r (click)="activeTab = 'tab'">Tab</a>
     </li>
+    <li [class.active]="activeTab == 'viewchild'">
+      <a r (click)="activeTab = 'viewchild'">View Child</a>
+    </li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane" [class.active]="activeTab == 'ani'">
@@ -61,6 +64,9 @@
     </div>
     <div class="tab-pane" [class.active]="activeTab == 'tab'">
       <app-tab></app-tab>
+    </div>
+    <div class="tab-pane" [class.active]="activeTab == 'viewchild'">
+      <app-viewchild></app-viewchild>
     </div>
   </div>
 </div>
