--- a/src/app/caesar/caesar.component.html
+++ b/src/app/caesar/caesar.component.html
@@ -33,6 +33,9 @@
     <li [class.active]="activeTab == 'viewchild'">
       <a r (click)="activeTab = 'viewchild'">View Child</a>
     </li>
+    <li [class.active]="activeTab == 'csstab'">
+      <a r (click)="activeTab = 'csstab'">CSS Tab</a>
+    </li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane" [class.active]="activeTab == 'ani'">
@@ -67,6 +70,9 @@
     </div>
     <div class="tab-pane" [class.active]="activeTab == 'viewchild'">
       <app-viewchild></app-viewchild>
+    </div>
+    <div class="tab-pane" [class.active]="activeTab == 'csstab'">
+      <app-csstab></app-csstab>
     </div>
   </div>
 </div>
